--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,28 @@
-Gunicorn 
+astroid==1.6.4
+autopep8==1.3.5
+bcrypt==3.1.4
+cffi==1.11.5
+click==6.7
+colorama==0.3.9
+dj-database-url==0.5.0
+Django==1.10
+django-heroku==0.3.1
+Flask==1.0.2
+gunicorn==19.9.0
+isort==4.3.4
+itsdangerous==0.24
+Jinja2==2.10
+lazy-object-proxy==1.3.1
+MarkupSafe==1.0
+mccabe==0.6.1
+psycopg2==2.7.6.1
+pycodestyle==2.4.0
+pycparser==2.18
+pylint==1.9.1
+PyMySQL==0.8.1
+pytz==2018.4
+six==1.11.0
+virtualenv==16.0.0
+Werkzeug==0.14.1
+whitenoise==4.1.2
+wrapt==1.10.11
